syntax = "proto3";

option java_package = "net.multun.gamecounter.proto";
option java_outer_classname = "ProtoGame";

message Player {
  int32 id = 1;
  uint64 color = 2;
  int32 selectedCounter = 3;
  map<int32, int32> counters = 4;
  string name = 5;
}

message Counter {
  int32 id = 1;
  string name = 2;
  int32 defaultValue = 3;
  int32 step = 4;
  int32 largeStep = 5;
}

message Game {
  repeated Player player = 1;
  repeated Counter counter = 2;
  int32 selectedDice = 4;
  bool alwaysUprightMode = 5;
}